# water-analysis

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
configs/: default.yaml
configs/source_profiles/: _default.yaml  secondary.yaml
docs/: user_guide.md
scripts/: smoke_check.ps1  smoke_check.sh
src/water_analysis/: __init__.py  cli.py  config.py
streamlit_app/: app.py
streamlit_app/components/: data_loader.py  readiness_badge.py  results_browser.py  scope_picker.py  sidebar.py  table_view.py
streamlit_app/pages/: 1_report.py  2_view_report.py  3_estimate.py  4_passport.py  5_correlations.py  6_guide.py
streamlit_app/services/: bundle_store.py  pipeline.py
tests/: helpers.py
tests/contract/: test_dataset_contract.py  test_required_targets.py
tests/integration/: test_baseline_comparison.py  test_combined_score_selection.py  test_correlation_scopes.py  test_estimate_manual.py  test_estimate_missing.py  test_feature_selection_no_leakage.py  test_modeling_gate.py  test_no_point_merge.py  test_report_bundle.py  test_report_cli.py  test_secondary_format.py  test_target_unavailable.py
tests/ui/: __init__.py  test_bundle_store.py  test_pipeline_wrappers.py  test_progress_callback.py  test_scope_picker_helpers.py
tests/unit/: test_censoring.py  test_feature_selection_modes.py  test_inference_selector.py  test_model_card.py  test_point_code.py  test_profile_empty_tables.py  test_readiness.py  test_scopes.py  test_seasonal_features.py  test_seasonality.py  test_source_profiles.py  test_specialist_summary.py  test_validation.py
(+39 files in other folders)
