[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water_analysis"
version = "0.1.0"
description = "Decision-support tooling for drinking water quality data analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "xgboost>=2.0",
]
ml = [
    "xgboost>=2.0",
]
ui = [
    "streamlit>=1.30",
    "pyarrow>=15.0",
]

[project.scripts]
water-analysis = "water_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
